Fix project link for NYC Neighborhood Opportunity Index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <span class="pill">SQL</span>
               <span class="pill">Tableau/Power BI</span>
             </div>
-            <a class="card-link" href="#">View project →</a>
+            <a class="card-link" href="nyc-opportunity-index.html">View project →</a>
           </article>
 
           <article class="card">
@@ -112,3 +112,4 @@
     </footer>
   </body>
 </html>
+
