--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>Jack Noble</title>
     <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Jack Noble — Fordham Information Systems student focused on data analytics and database systems. Portfolio of projects, case studies, and contact info."
+    />
   </head>
 
   <body>
@@ -18,6 +22,14 @@
           <a href="#about">About</a>
           <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
+          <a
+            class="nav-cta"
+            href="assets/Jack-Noble-Resume.pdf"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Resume
+          </a>
         </nav>
       </div>
     </header>
@@ -26,9 +38,10 @@
       <section id="about" class="section">
         <h2>About</h2>
         <p>
-          I’m a Fordham Information Systems student focused on data analytics,
-          database systems, and turning messy data into clear insights. I’m
-          currently seeking a Summer internship in NYC.
+          I’m a Fordham Information Systems student focused on data analytics and
+          database systems. I build clean, decision-ready analysis—from messy
+          data → clear insights—using Python, SQL, and visualization tools. I’m
+          currently recruiting for Summer 2026 internships in NYC.
         </p>
       </section>
 
@@ -47,11 +60,13 @@
               <span class="pill">SQL</span>
               <span class="pill">Tableau/Power BI</span>
             </div>
-            <a class="card-link" href="nyc-opportunity-index.html">View project →</a>
+            <a class="card-link" href="nyc-opportunity-index.html"
+              >Open case study →</a
+            >
           </article>
 
           <article class="card">
-            <h3>Project 2 (Placeholder)</h3>
+            <h3>Project 2 (Coming Soon)</h3>
             <p>
               Short description of what you did and why it matters. Add results
               when you can.
@@ -60,11 +75,11 @@
               <span class="pill">Excel</span>
               <span class="pill">SQL</span>
             </div>
-            <a class="card-link" href="#">View project →</a>
+            <span class="card-link">Coming soon</span>
           </article>
 
           <article class="card">
-            <h3>Project 3 (Placeholder)</h3>
+            <h3>Project 3 (Coming Soon)</h3>
             <p>
               Another project with a clear business problem → approach → outcome.
             </p>
@@ -72,7 +87,7 @@
               <span class="pill">Python</span>
               <span class="pill">Pandas</span>
             </div>
-            <a class="card-link" href="#">View project →</a>
+            <span class="card-link">Coming soon</span>
           </article>
         </div>
       </section>
@@ -107,9 +122,8 @@
 
     <footer class="footer">
       <div class="container">
-        <p>© 2025 Jack Noble</p>
+        <p>© 2026 Jack Noble</p>
       </div>
     </footer>
   </body>
 </html>
-
