--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             padding: 0 48px;
             position: relative;
             overflow: hidden;
-            margin-top: -80px;
+            padding-top: 100px;
             background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
         }
         
