--- a/index.html
+++ b/index.html
@@ -481,15 +481,16 @@
 
             <!-- Project 4 -->
             <article class="project-card">
-                <h3>SQL KPI Dashboard (Orders & Customers)</h3>
+                <h3>Celitcs Championship DNA: SQL Analysis</h3>
                 <p>
-                    Designed a relational schema and wrote KPI queries (AOV, retention,
-                    revenue trends) to support business decision-making.
+                    Analyzing how the 2024 Celtics championship team compares to previous 
+                    Celtics champions (2008, 1986) and recent NBA champions using SQL to 
+                    uncover what separates championship teams from contenders.
                 </p>
                 <div class="pill-row">
                     <span class="pill">SQL</span>
                     <span class="pill">Data Modeling</span>
-                    <span class="pill">BI</span>
+                    <span class="pill">Sports Analytics</span>
                 </div>
                 <span class="status-pill">In progress</span>
             </article>
@@ -515,4 +516,3 @@
     </footer>
 </body>
 </html>
-
