--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                     <span class="pill">Pandas</span>
                     <span class="pill">Text Analysis</span>
                 </div>
-                <span class="status-pill">In progress</span>
+                <span class="status-pill">In development</span>
             </article>
 
             <!-- Project 4 -->
@@ -492,7 +492,7 @@
                     <span class="pill">Data Modeling</span>
                     <span class="pill">Sports Analytics</span>
                 </div>
-                <span class="status-pill">In progress</span>
+                <span class="status-pill">In development</span>
             </article>
         </div>
     </section>
@@ -515,4 +515,5 @@
     </footer>
 </body>
 </html>
+
 
