--- a/index.html
+++ b/index.html
@@ -476,24 +476,26 @@
                     <span class="pill">Pandas</span>
                     <span class="pill">Text Analysis</span>
                 </div>
-                <span class="status-pill">In development</span>
+                <span class="status-pill">In progress</span>
             </article>
 
             <!-- Project 4 -->
-            <article class="project-card">
-                <h3>Celitcs Championship DNA: SQL Analysis</h3>
-                <p>
-                    Analyzing how the 2024 Celtics championship team compares to previous 
-                    Celtics champions (2008, 1986) and recent NBA champions using SQL to 
-                    uncover what separates championship teams from contenders.
-                </p>
-                <div class="pill-row">
-                    <span class="pill">SQL</span>
-                    <span class="pill">Data Modeling</span>
-                    <span class="pill">Sports Analytics</span>
-                </div>
-                <span class="status-pill">In development</span>
-            </article>
+<article class="card">
+  <h3>Celtics Championship DNA: SQL Analysis</h3>
+  <p>
+    Built a relational database analyzing how the 2024 Celtics championship team 
+    compares to recent NBA champions. Used advanced SQL (window functions, CTEs) 
+    to identify what separates elite champions from contenders.
+  </p>
+  <div class="pill-row">
+    <span class="pill">SQL</span>
+    <span class="pill">SQLite</span>
+    <span class="pill">Data Analysis</span>
+  </div>
+  <a class="card-link" href="celtics_championship_dna.html">
+    View analysis →
+  </a>
+</article>
         </div>
     </section>
     
@@ -506,6 +508,7 @@
             <p>
                 Email: <a href="mailto:jnoble12@fordham.edu">jnoble12@fordham.edu</a><br>
                 LinkedIn: <a href="https://www.linkedin.com/in/john-noble5/" target="_blank" rel="noopener noreferrer">linkedin.com/in/john-noble5</a><br>
+                GitHub: <a href="https://github.com/Jnoble555" target="_blank" rel="noopener noreferrer">github.com/Jnoble555</a>
             </p>
         </div>
     </section>
@@ -515,5 +518,3 @@
     </footer>
 </body>
 </html>
-
-
