--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jack Noble | Data Analytics Portfolio</title>
-    <meta name="description" content="Jack Noble — Fordham Information Systems student focused on data analytics and database systems. Portfolio of projects, case studies, and contact info.">
+    <meta name="description" content="Jack Noble — Fordham Information Systems student focused on data analytics and database systems. Portfolio of SQL, Python, and data visualization projects.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700;900&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
@@ -479,23 +479,21 @@
                 <span class="status-pill">In progress</span>
             </article>
 
-            <!-- Project 4 -->
-<article class="card">
-  <h3>Celtics Championship DNA: SQL Analysis</h3>
-  <p>
-    Built a relational database analyzing how the 2024 Celtics championship team 
-    compares to recent NBA champions. Used advanced SQL (window functions, CTEs) 
-    to identify what separates elite champions from contenders.
-  </p>
-  <div class="pill-row">
-    <span class="pill">SQL</span>
-    <span class="pill">SQLite</span>
-    <span class="pill">Data Analysis</span>
-  </div>
-  <a class="card-link" href="celtics_championship_dna.html">
-    View analysis →
-  </a>
-</article>
+            <!-- Project 4 - FIXED STYLING -->
+            <article class="project-card">
+                <h3>Celtics Championship DNA: SQL Analysis</h3>
+                <p>
+                    Built a relational database analyzing how the 2024 Celtics championship team 
+                    compares to recent NBA champions. Used advanced SQL (window functions, CTEs) 
+                    to identify what separates elite champions from contenders.
+                </p>
+                <div class="pill-row">
+                    <span class="pill">SQL</span>
+                    <span class="pill">SQLite</span>
+                    <span class="pill">Data Analysis</span>
+                </div>
+                <a class="project-link" href="celtics_championship_dna.html">View analysis</a>
+            </article>
         </div>
     </section>
     
