--- a/nyc-opportunity-index.html
+++ b/nyc-opportunity-index.html
@@ -2,29 +2,187 @@
 <html>
   <head>
     <title>NYC Neighborhood Opportunity Index | Jack Noble</title>
-    <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+        background: #f7f7f8;
+        color: #1f2937;
+        line-height: 1.6;
+      }
+
+      /* Back to Home Button - Static Position */
+      .back-nav {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        z-index: 1000;
+      }
+
+      .back-button {
+        background: white;
+        color: #2563eb;
+        padding: 12px 24px;
+        border-radius: 8px;
+        text-decoration: none;
+        font-weight: 700;
+        font-size: 14px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+        border: 1px solid #e5e7eb;
+        transition: transform 0.2s, box-shadow 0.2s;
+      }
+
+      .back-button:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
+      }
+
+      .back-button::before {
+        content: '←';
+        font-size: 16px;
+      }
+
+      .container {
+        max-width: 980px;
+        margin: 0 auto;
+        padding: 80px 20px 40px;
+        position: relative;
+      }
+
+      .header {
+        background: white;
+        border: 1px solid #e5e7eb;
+        border-radius: 12px;
+        padding: 32px;
+        margin-bottom: 32px;
+      }
+
+      .site-title {
+        font-size: 28px;
+        font-weight: 700;
+        margin-bottom: 8px;
+        color: #111827;
+      }
+
+      .tagline {
+        color: #6b7280;
+        font-size: 14px;
+      }
+
+      .section {
+        background: white;
+        border: 1px solid #e5e7eb;
+        border-radius: 12px;
+        padding: 32px;
+        margin-bottom: 24px;
+      }
+
+      .section h2 {
+        font-size: 22px;
+        margin-bottom: 16px;
+        color: #111827;
+      }
+
+      .section p {
+        color: #4b5563;
+        margin-bottom: 12px;
+        line-height: 1.6;
+      }
+
+      .project-subtitle {
+        font-size: 16px;
+        color: #6b7280;
+        margin-bottom: 20px;
+      }
+
+      .pill-row {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
+        margin-top: 16px;
+      }
+
+      .pill {
+        background: #eef2ff;
+        border: 1px solid #e0e7ff;
+        padding: 6px 12px;
+        border-radius: 999px;
+        font-size: 13px;
+        color: #4338ca;
+        font-weight: 600;
+      }
+
+      .bullets {
+        padding-left: 24px;
+        color: #4b5563;
+      }
+
+      .bullets li {
+        margin-bottom: 10px;
+        line-height: 1.6;
+      }
+
+      .bullets strong {
+        color: #111827;
+      }
+
+      .footer {
+        background: white;
+        border-top: 1px solid #e5e7eb;
+        padding: 24px;
+        margin-top: 40px;
+        text-align: center;
+        border-radius: 12px;
+      }
+
+      .footer p {
+        color: #6b7280;
+        font-size: 14px;
+      }
+
+      @media (max-width: 768px) {
+        .container {
+          padding: 60px 15px 30px;
+        }
+
+        .header {
+          padding: 24px;
+        }
+
+        .section {
+          padding: 24px;
+        }
+
+        .back-button {
+          padding: 10px 16px;
+          font-size: 13px;
+        }
+      }
+    </style>
   </head>
 
   <body>
-    <header class="header">
-      <div class="container header-inner">
-        <div>
-          <h1 class="site-title">Jack Noble</h1>
-          <p class="tagline">Information Systems • Data Analytics • NYC</p>
-        </div>
+    <div class="back-nav">
+      <a href="index.html" class="back-button">Back to Portfolio</a>
+    </div>
 
-        <nav class="nav">
-          <a href="index.html">Home</a>
-          <a href="index.html#projects">Projects</a>
-          <a href="index.html#contact">Contact</a>
-        </nav>
+    <div class="container">
+      <div class="header">
+        <h1 class="site-title">NYC Neighborhood Opportunity Index</h1>
+        <p class="tagline">Information Systems • Data Analytics • NYC</p>
       </div>
-    </header>
 
-    <main class="container">
-      <section class="section">
-        <h2>NYC Neighborhood Opportunity Index</h2>
+      <div class="section">
+        <h2>Overview</h2>
         <p class="project-subtitle">
           Built a neighborhood ranking model using public NYC + Census data to help
           compare areas on affordability, safety, and transit access.
@@ -36,9 +194,9 @@
           <span class="pill">Data Cleaning</span>
           <span class="pill">Visualization</span>
         </div>
-      </section>
+      </div>
 
-      <section class="section">
+      <div class="section">
         <h2>Problem</h2>
         <p>
           Choosing where to live, recruit, or launch a small business in NYC involves
@@ -46,58 +204,56 @@
           scoring framework that compares neighborhoods consistently and makes the
           tradeoffs easy to see.
         </p>
-      </section>
+      </div>
 
-      <section class="section">
+      <div class="section">
         <h2>Data</h2>
         <ul class="bullets">
           <li>NYC Open Data (public safety / incidents; neighborhood boundaries where applicable)</li>
           <li>Transit access (subway station locations / proximity measures)</li>
           <li>Census / ACS-style indicators (income, rent/affordability proxies)</li>
         </ul>
-      </section>
+      </div>
 
-      <section class="section">
+      <div class="section">
         <h2>Approach</h2>
         <ol class="bullets">
           <li><strong>Cleaning:</strong> standardized neighborhood names, handled missing values, removed duplicates.</li>
           <li><strong>Feature engineering:</strong> created metrics for affordability, safety, and transit access.</li>
-          <li><strong>Scoring model:</strong> normalized metrics and combined them into an overall “Opportunity Score.”</li>
+          <li><strong>Scoring model:</strong> normalized metrics and combined them into an overall "Opportunity Score."</li>
           <li><strong>Outputs:</strong> produced a ranked table and visual summaries for quick comparison.</li>
         </ol>
-      </section>
+      </div>
 
-      <section class="section">
+      <div class="section">
         <h2>Results</h2>
         <ul class="bullets">
           <li>Created a repeatable scoring pipeline that can be updated as new public data is released.</li>
           <li>Generated a ranked view that highlights neighborhoods that are strong on transit + affordability tradeoffs.</li>
           <li>Packaged results in a format that can feed a dashboard (map + filters) as a next step.</li>
         </ul>
-      </section>
+      </div>
 
-      <section class="section">
-        <h2>What I’d do next</h2>
+      <div class="section">
+        <h2>What I'd do next</h2>
         <ul class="bullets">
           <li>Add interactive map filtering (by borough, budget range, commute threshold).</li>
           <li>Validate scoring weights with sensitivity testing (how rankings change when weights change).</li>
-          <li>Add a “commute-to” feature: optimize for travel time to Midtown / FiDi / specific address.</li>
+          <li>Add a "commute-to" feature: optimize for travel time to Midtown / FiDi / specific address.</li>
         </ul>
-      </section>
+      </div>
 
-      <section class="section">
+      <div class="section">
         <h2>Links</h2>
         <ul class="bullets">
-          <li><a href="#" target="_blank" rel="noopener noreferrer">GitHub repo (add when ready)</a></li>
-          <li><a href="#" target="_blank" rel="noopener noreferrer">Dashboard / demo (add when ready)</a></li>
+          <li><a href="https://github.com/Jnoble555/personal-website" target="_blank" rel="noopener noreferrer" style="color: #2563eb; text-decoration: none;">GitHub repo</a></li>
+          <li>Dashboard / demo (coming soon)</li>
         </ul>
-      </section>
-    </main>
-
-    <footer class="footer">
-      <div class="container">
-        <p>© 2025 Jack Noble</p>
       </div>
-    </footer>
+
+      <div class="footer">
+        <p>© 2026 Jack Noble</p>
+      </div>
+    </div>
   </body>
 </html>
