--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jack Noble | Data Analytics Portfolio</title>
     <meta name="description" content="Jack Noble — Fordham Information Systems student focused on data analytics and database systems. Portfolio of SQL, Python, and data visualization projects.">
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7HXVRPC9HS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7HXVRPC9HS');
+    </script>
+    <!-- End Google Analytics -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700;900&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
@@ -479,7 +490,7 @@
                 <span class="status-pill">In progress</span>
             </article>
 
-            <!-- Project 4 - FIXED STYLING -->
+            <!-- Project 4 -->
             <article class="project-card">
                 <h3>Celtics Championship DNA: SQL Analysis</h3>
                 <p>
@@ -514,5 +525,4 @@
         <p>© 2026 Jack Noble</p>
     </footer>
 </body>
-
 </html>
