--- a/nyc-opportunity-index.html
+++ b/nyc-opportunity-index.html
@@ -3,6 +3,17 @@
   <head>
     <title>NYC Neighborhood Opportunity Index | Jack Noble</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7HXVRPC9HS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7HXVRPC9HS');
+    </script>
+    <!-- End Google Analytics -->
+
     <style>
       * {
         box-sizing: border-box;
@@ -256,5 +267,4 @@
       </div>
     </div>
   </body>
-
 </html>
